fix spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,9 +9,21 @@
   display: flex;
   gap: 10px;
   font-size: 14px;
-  margin-bottom: 16px;
 }
 
 .git-info a {
   text-decoration: none;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 16px;
+}
+
+.license-info {
+  display: flex;
+  align-items: center;
 }
